[gd_scene load_steps=5 format=2]

[ext_resource path="res://Artworks/Player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "invicibility"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true, false, true, false, true ]
}

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.7, 0.7 )
collision_mask = 15
script = ExtResource( 2 )
bulletPerShot = 1

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -24.2857, -45.7143, -21.4286, -47.1429, 4.28571, -50, 7.14286, -48.5714, 5.71429, -44.2857, 1.42857, -41.4286, -1.42857, -37.1429, 11.4286, -12.8571, 37.1429, -8.57143, 37.1429, 7.14286, 35.7143, 8.57143, 11.4286, 11.4286, -1.42857, 35.7143, 0, 38.5714, 7.14286, 42.8571, 5.71429, 48.5714, 2.85714, 50, -25.7143, 47.1429, -25.7143, 42.8571, -21.4286, 40, -24.2857, 34.2857, -27.1429, 14.2857, -38.5714, 7.14286, -38.5714, -7.14286, -28.5714, -14.2857, -24.2857, -35.7143, -20, -41.4286, -24.2857, -41.4286, -25.7143, -44.2857 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
playback_speed = 0.8
anims/RESET = SubResource( 2 )
anims/invicibility = SubResource( 3 )

[node name="FiringTimer" type="Timer" parent="."]

[node name="FirePoints" type="Node2D" parent="."]
scale = Vector2( 1, 1 )

[node name="FirePointSingle" type="Position2D" parent="FirePoints"]
visible = false
position = Vector2( 52.7143, 0 )
scale = Vector2( 1, 1 )

[node name="FirePointDouble_1" type="Position2D" parent="FirePoints"]
visible = false
position = Vector2( 52.714, -20 )
scale = Vector2( 1, 1 )

[node name="FirePointDouble_2" type="Position2D" parent="FirePoints"]
visible = false
position = Vector2( 52.714, 20 )
scale = Vector2( 1, 1 )

[node name="FirePointTriple_1" type="Position2D" parent="FirePoints"]
visible = false
position = Vector2( 70, 0 )
scale = Vector2( 1, 1 )

[node name="FirePointTriple_2" type="Position2D" parent="FirePoints"]
visible = false
position = Vector2( 48, -20 )
scale = Vector2( 1, 1 )

[node name="FirePointTriple_3" type="Position2D" parent="FirePoints"]
visible = false
position = Vector2( 48, 20 )
scale = Vector2( 1, 1 )

[connection signal="timeout" from="FiringTimer" to="." method="_on_FiringTimer_timeout"]
